tests/interpreter/pass/019-postdec-float.hyg
let mutable x = 3.2f;
let y = x --;

assert(y - 3.2f < 0.000001f);
assert(x - 2.2f < 0.000001f)
