tests/interpreter/fail/019-dec.hyg
let mutable x = 1.0f;
let y = x --;

assert(y = 0.0f);
assert(x = 1.0f)
